# jupyter_turtle

./: README.md  pyproject.toml
Examples/: Simple Example.ipynb
jupyter_turtle/: __init__.py  drawing.py  turtle.py
src/jupyter_turtle/: turtle.py
tests/: SimpleExample.ipynb  makefile
tests/temp/: SimpleExample.ipynb
