[project]
name = "jupyter_turtle"
version = "0.2.1"
dependencies = [
    'ipycanvas',
    'face_recognition',
    'importlib-metadata; python_version<"3.8"',
]

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
jupyter_turtle = ["*.png"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
