[project]
name = "jupyter_turtle"
authors = [
    {name = "Mike Matera", email = "michael.matera@cabrillo.edu"},
]
version = "1.0.0"
dependencies = [
    "ipycanvas",
    "jupyterlab",
]

[tool.setuptools.package-data]
jupyter_turtle = ["*.png"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 79

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true
